fix(manipulationEntertainers, searchEntertainers): alignment block on mobile view

--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -72,7 +72,7 @@ app {
 }
 
 .photo_active {
-	border: 2px solid $Cardinal;
+	border: 4px solid $Cardinal;
 }
 
 // components
