--- a/client/app/components/order/manipulationEntertainers/manipulationEntertainers.scss
+++ b/client/app/components/order/manipulationEntertainers/manipulationEntertainers.scss
@@ -12,16 +12,6 @@
 #manipulation-entertainers {
 	padding: 52px 0px 40px 0px;
 
-/*   @media (min-width: 960px) {
-		max-width: 794px;
-		width: 794px;
-  }	 */
-
-/*   @media (max-width: 960px) {
-    padding-left: 18px;
-    padding-right: 18px;
-  } */
-
 	& > * {
 		padding: 0px;
 	}
@@ -56,7 +46,13 @@
 			font: 15px $oswald;
 			letter-spacing: 0.1px;
 			line-height: 24px;
-			text-align: right;
+			text-align: left;
+			&_middle {
+				margin-left: 30px;
+			}
+			&_right {
+				text-align: right;
+			}
 			&_active {
 				color: $white;
 			}
